--- a/index.html
+++ b/index.html
@@ -7,68 +7,7 @@
     <title>Doctor Appointment System</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <style>
-        body {
-            background: linear-gradient(135deg, #f8f9fa, #e9ecef);
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .navbar {
-            background-color: #007bff;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .carousel-item img {
-            max-height: 500px;
-            object-fit: cover;
-            width: 100%;
-        }
-
-        #carouselExampleIndicators {
-            margin-top: 100px;
-        }
-
-        .info-section {
-            padding: 60px 20px;
-            background: #ffffff;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            margin-top: -50px;
-            z-index: 2;
-            position: relative;
-        }
-
-        .info-section h2 {
-            color: #007bff;
-            font-weight: bold;
-        }
-
-        .info-section p {
-            color: #495057;
-            font-size: 1.1rem;
-            line-height: 1.6;
-        }
-
-        .feature-card {
-            border: none;
-            background: #f8f9fa;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .feature-card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-        }
-
-        .footer {
-            background: #007bff;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="CSS/index.css">
 </head>
 
 <body>
@@ -102,21 +41,21 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img1doc.jpg" class="d-block w-100" alt="Doctor Consultation">
+                <img src="Images/img1doc.jpg" class="d-block w-100" alt="Doctor Consultation">
                 <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
                     <h3>Your Health is Our Priority</h3>
                     <p>Experience personalized care with our top specialists.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="img2doc.jpg" class="d-block w-100" alt="State-of-the-Art Facilities">
+                <img src="Images/img2doc.jpg" class="d-block w-100" alt="State-of-the-Art Facilities">
                 <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
                     <h3>State-of-the-Art Facilities</h3>
                     <p>Equipped with the latest technology for better outcomes.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="img3doc.jpg" class="d-block w-100" alt="24/7 Support">
+                <img src="Images/img3doc.jpg" class="d-block w-100" alt="24/7 Support">
                 <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
                     <h3>24/7 Support</h3>
                     <p>We're here to assist you anytime, anywhere.</p>
@@ -183,11 +122,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        $('.carousel').carousel({
-            interval: 5000 // Change every 5 seconds
-        })
-    </script>
+    <script src="JS/index.js"></script>
 </body>
 
 </html>
