--- a/patient.html
+++ b/patient.html
@@ -5,7 +5,7 @@
     <title>Patient Dashboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="stylesp.css">
+    <link rel="stylesheet" href="CSS/patient.css">
 </head>
 
 <body>
@@ -51,7 +51,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="scriptp.js"></script>
+    <script src="JS/patient.js"></script>
 </body>
 
 </html>
