--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Doctor Appointment System</a>
+            <a class="navbar-brand" href="#">
+                <img src="Images/logo.png" alt="CareSync Logo" class="navbar-logo">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                   
                     <li class="nav-item">
                         <a class="nav-link" href="login.html">Log In</a>
                     </li>
