new updated complted interim
++++++++++++++

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                   
+                    <li class="nav-item">
+                        <a class="nav-link" href="services.html">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="login.html">Log In</a>
                     </li>
@@ -94,7 +99,7 @@
             <div class="col-md-4">
                 <div class="card feature-card">
                     <div class="card-body text-center">
-                        <h5 class="card-title text-primary">Easy Appointments</h5>
+                        <h5 class="card-title" style="color: #da4f4f;">Easy Appointments</h5>
                         <p class="card-text">Book and manage appointments effortlessly with just a few clicks.</p>
                     </div>
                 </div>
@@ -102,7 +107,7 @@
             <div class="col-md-4">
                 <div class="card feature-card">
                     <div class="card-body text-center">
-                        <h5 class="card-title text-primary">Expert Doctors</h5>
+                        <h5 class="card-title" style="color: #da4f4f;">Expert Doctors</h5>
                         <p class="card-text">Access a network of highly qualified and experienced specialists.</p>
                     </div>
                 </div>
@@ -110,7 +115,7 @@
             <div class="col-md-4">
                 <div class="card feature-card">
                     <div class="card-body text-center">
-                        <h5 class="card-title text-primary">24/7 Support</h5>
+                        <h5 class="card-title" style="color: #da4f4f;">24/7 Support</h5>
                         <p class="card-text">We're here for you around the clock to answer your questions and concerns.</p>
                     </div>
                 </div>
@@ -121,7 +126,7 @@
     <!-- Footer -->
     <footer class="footer mt-5">
         <div class="container">
-            <p>© 2024 Doctor Appointment System. All rights reserved.</p>
+            <p>© 2024 CareSync Doc Appointment System. All rights reserved.</p>
         </div>
     </footer>
 
