--- a/signup.html
+++ b/signup.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -23,6 +22,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="services.html">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="login.html">Log In</a>
                     </li>
                 </ul>
@@ -31,26 +39,25 @@
     </nav>
 
     <!-- Signup Section -->
-    <div class="container mt-5">
+    <div class="container mt-5 pt-5">
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card">
-                    <div class="card-header text-center text-white bg-dark">
-                        Sign Up As
+                    <div class="card-header">
+                        <h3 class="text-center">Sign Up As</h3>
                     </div>
                     <div class="card-body text-center">
-                        <div class="mb-4">
-                            <img src="Images/docicon.png" alt="Doctor" class="img-fluid" id="doctorImage">
-                            <button id="showDoctorSignup" class="btn btn-primary btn-lg mt-3 d-none">Doctor</button>
+                        <div class="signup-options">
+                            <img id="doctorImage" src="Images/docicon.png" alt="Doctor" class="signup-image mb-3">
+                            <img id="patientImage" src="Images/patienticon.png" alt="Patient" class="signup-image mb-3">
                         </div>
-                        <div>
-                            <img src="Images/patienticon.png" alt="Patient" class="img-fluid" id="patientImage">
-                            <button id="showPatientSignup" class="btn btn-info btn-lg mt-3 d-none">Patient</button>
-                        </div>
+
+                        <!-- Back Button -->
+                        <button id="backArrow" class="btn btn-secondary" style="display: none;">Back</button>
 
                         <!-- Doctor Signup Form -->
                         <div id="doctorSignupForm" class="mt-4" style="display: none;">
-                            <h2 class="text-primary">Doctor Sign Up</h2>
+                            <h2>Doctor Sign Up</h2>
                             <form id="doctorForm">
                                 <div class="form-group">
                                     <label for="doctorName">Name</label>
@@ -79,12 +86,11 @@
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
                             </form>
-                            <div id="doctorSignupMessage" class="mt-3" style="display: none;"></div>
                         </div>
 
                         <!-- Patient Signup Form -->
                         <div id="patientSignupForm" class="mt-4" style="display: none;">
-                            <h2 class="text-primary">Patient Sign Up</h2>
+                            <h2>Patient Sign Up</h2>
                             <form id="patientForm">
                                 <div class="form-group">
                                     <label for="patientName">Name</label>
@@ -104,7 +110,6 @@
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
                             </form>
-                            <div id="patientSignupMessage" class="mt-3" style="display: none;"></div>
                         </div>
                     </div>
                 </div>
